Fix overflow on mobile

--- a/assets/scss/templates/_navigation.scss
+++ b/assets/scss/templates/_navigation.scss
@@ -5,7 +5,7 @@
     background-color: $primary-color;
     padding: 0 100px;
     @include desktop {
-      padding: 15px 20px;
+      padding: 0 20px;
     }
   }
   @include desktop {
